Pods 里面是不是有什么需要停止追踪的文件？

--- a/podfile
+++ b/podfile
@@ -1,4 +1,5 @@
 target 'FangYuanObjCDemo' do
 	pod 'HaloObjC'
 	pod 'FangYuanObjC', :path=>"./FangYuanObjC"
+    pod 'Reveal-iOS-SDK', :configurations => ["Debug"]
 end
